--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Sherry</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/content.css" rel="stylesheet">
 </head>
 <body>
     <div class="header">
@@ -23,18 +24,59 @@
             <p>I'm a &nbsp;<del>coder</del>&nbsp;&nbsp;<strong>carrier</strong></p>
         </div>
     </div>
-    <section class="parallax-section">
-        <div class="content">
-            <a name="about">about</a>
+
+    <section id="about">
+        <div class="content-about">
+            <div class="spinner">
+                <div class="rect1"></div>
+                <div class="rect2"></div>
+                <div class="rect3"></div>
+                <div class="rect4"></div>
+                <div class="rect5"></div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-3 content-info">
+                        关于我
+                    </div>
+                    <div class="col-xs-8 content-info">
+                        我不是程序媛，我只是代码的搬运工。
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
-    <div class="content">
-        <a name="blog">blog</a>
-    </div>
-    <div class="content">
-        <a name="contact">contact</a>
-    </div>
+    <section id="blog">
+        <div class="content-blog">
+            <div class="spinner1">
+                <div class="bounce1"></div>
+                <div class="bounce2"></div>
+                <div class="bounce3"></div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact">
+        <div class="content-contact">
+            <div class="spinner2">
+                <div class="cube1"></div>
+                <div class="cube2"></div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-3 content-info">
+                        联系我
+                    </div>
+                    <div class="col-xs-8 content-info">
+                        <span class="glyphicon glyphicon-send">&nbsp;sherryzhang21@outlook.com</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <a class="go-top"><span class="glyphicon glyphicon-chevron-up"></span></a>
 
     <div class="footer">
         <div class="container-fluid">
@@ -47,6 +89,11 @@
     <script src="js/jquery.js"></script>
     <script href="js/bootstrap.min.js"></script>
     <script src="js/flexible.js"></script>
+    <script src="js/jquery.smooth-scroll.js"></script>
+    <script src="js/jquery.ba-bbq.js"></script>
+    <script src="js/prefixfree.min.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/radialindicator.js"></script>
     <script src="js/custom.js"></script>
 </body>
 </html>
