--- a/test1.html
+++ b/test1.html
@@ -1,19 +1,65 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>Bootstrap 实例 - 标签式的导航菜单</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <script src="js/jquery-1.11.3.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <meta charset="utf-8">
+    <title>Smooth Scroll jQuery Plugin Demo</title>
+    <style type="text/css">
+        body {
+            font-family: "Helvetica Neue", Helvetica, sans-serif;
+        }
+        .container {
+            margin: 40px auto;
+            width: 200px;
+        }
+        h2 {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-<p>标签式的导航菜单</p>
-<ul class="nav nav-tabs">
-    <li class="active"><a href="#">Home</a></li>
-    <li><a href="#">SVN</a></li>
-    <li><a href="#">iOS</a></li>
-    <li><a href="#">VB.Net</a></li>
-    <li><a href="#">Java</a></li>
-    <li><a href="#">PHP</a></li>
-</ul>
+<h2>Smooth Scroll jQuery Plugin with Back Button Support</h2>
+<div class="container">
+    <ul id="nav">
+        <li><a href="#p1">p1</a></li>
+        <li><a href="#p2">p2</a></li>
+        <li><a href="#p3">p3</a></li>
+        <li><a href="#p4">p4</a></li>
+        <li><a href="#p5">p5</a></li>
+        <li><a href="#">#</a></li>
+        <li><a href="#not-here">not-here</a></li>
+    </ul>
+    <div id="p1" style="border:solid 1px red; height:200px;">great</div>
+    <div id="p2" style="border:solid 1px red; height:200px;">great</div>
+    <div id="p3" style="border:solid 1px red; height:200px;">great</div>
+    <div id="p4" style="border:solid 1px red; height:200px;">great</div>
+    <div id="p5" style="border:solid 1px red; height:200px;">great</div>
+    <p id="p6">p6 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <a href="#nav">back to nav</a>
+
+</div>
+<script src="js/jquery.js"></script>
+
+<script src="js/jquery.smooth-scroll.js"></script>
+<script src="js/jquery.ba-bbq.js"></script>
+<script>
+    $(document)
+            .on('click', 'a[href*="#"]', function() {
+                if ( this.hash ) {
+                    $.bbq.pushState( '#/' + this.hash.slice(1) );
+                    return false;
+                }
+            })
+            .ready(function() {
+                $(window).bind('hashchange', function(event) {
+                    var tgt = location.hash.replace(/^#\/?/,'');
+                    if ( document.getElementById(tgt) ) {
+                        $.smoothScroll({scrollTarget: '#' + tgt});
+                    }
+                });
+
+                $(window).trigger('hashchange');
+            });
+</script>
+
 </body>
 </html>
