--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=no" />
     <title>Sherry</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style1.css" />
     <link href="css/style.css" rel="stylesheet">
     <link href="css/content.css" rel="stylesheet">
 </head>
@@ -54,6 +55,30 @@
                 <div class="bounce2"></div>
                 <div class="bounce3"></div>
             </div>
+
+            <div class="iw_wrapper">
+                <ul class="iw_thumbs" id="iw_thumbs">
+                    <li><img src="img/head.jpg" data-img="img/head.jpg" alt="Thumb1" />
+                        <div>
+                            <h2>Sherry</h2>
+                            <p>只能在pc端显示正常.</p>
+                        </div>
+                    </li>
+                    <li><img src="img/banner1.png" data-img="img/head.jpg" alt="Thumb1" />
+                        <div>
+                            <h2>Sherry</h2>
+                            <p>只能在pc端显示正常.</p>
+                        </div>
+                    </li>
+                    <li><img src="img/banner.png" data-img="img/head.jpg" alt="Thumb1" />
+                        <div>
+                            <h2>Sherry</h2>
+                            <p>只能在pc端显示正常.</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div id="iw_ribbon" class="iw_ribbon"> <span class="iw_close"></span> <span class="iw_zoom">Close</span> </div>
         </div>
     </section>
 
@@ -94,6 +119,8 @@
     <script src="js/prefixfree.min.js"></script>
     <script src="js/index.js"></script>
     <script src="js/radialindicator.js"></script>
+    <script type="text/javascript" src="js/jquery.masonry.min.js"></script>
+    <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
     <script src="js/custom.js"></script>
 </body>
 </html>
