--- a/index.html
+++ b/index.html
@@ -45,6 +45,40 @@
                     </div>
                 </div>
             </div>
+            <div class="iw_wrapper">
+                <ul class="iw_thumbs" id="iw_thumbs">
+                    <li><img src="img/head.jpg" data-img="img/head.jpg" alt="Thumb1" />
+                        <div>
+                            <h2>Sherry</h2>
+                            <p>显示正常.</p>
+                        </div>
+                    </li>
+                    <li><img src="img/banner1.png" data-img="img/banner1.jpg" alt="Thumb1" />
+                        <div>
+                            <h2>Sherry</h2>
+                            <p>显示正常.</p>
+                        </div>
+                    </li>
+                    <li><img src="img/banner.png" data-img="img/banner.jpg" alt="Thumb1" />
+                        <div>
+                            <h2>Sherry</h2>
+                            <p>显示正常.</p>
+                        </div>
+                    </li>
+                    <li><img src="img/pic.jpg" data-img="img/pic.jpg" alt="Thumb1" />
+                        <div>
+                            <h2>皂片</h2>
+                            <p>就是想放张大一点的皂片</p>
+                        </div>
+                    </li>
+                    <li><img src="img/热力图.png" data-img="img/热力图.png" alt="Thumb1" />
+                        <div>
+                            <h2>热力图</h2>
+                            <p>这张图我做了一周.</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
     </section>
 
@@ -56,28 +90,7 @@
                 <div class="bounce3"></div>
             </div>
 
-            <div class="iw_wrapper">
-                <ul class="iw_thumbs" id="iw_thumbs">
-                    <li><img src="img/head.jpg" data-img="img/head.jpg" alt="Thumb1" />
-                        <div>
-                            <h2>Sherry</h2>
-                            <p>只能在pc端显示正常.</p>
-                        </div>
-                    </li>
-                    <li><img src="img/banner1.png" data-img="img/head.jpg" alt="Thumb1" />
-                        <div>
-                            <h2>Sherry</h2>
-                            <p>只能在pc端显示正常.</p>
-                        </div>
-                    </li>
-                    <li><img src="img/banner.png" data-img="img/head.jpg" alt="Thumb1" />
-                        <div>
-                            <h2>Sherry</h2>
-                            <p>只能在pc端显示正常.</p>
-                        </div>
-                    </li>
-                </ul>
-            </div>
+
             <div id="iw_ribbon" class="iw_ribbon"> <span class="iw_close"></span> <span class="iw_zoom">Close</span> </div>
         </div>
     </section>
@@ -90,10 +103,10 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-3 content-info">
+                    <div class="col-xs-3 content-info2">
                         联系我
                     </div>
-                    <div class="col-xs-8 content-info">
+                    <div class="col-xs-8 content-info2">
                         <span class="glyphicon glyphicon-send">&nbsp;sherryzhang21@outlook.com</span>
                     </div>
                 </div>
