--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                     </li>
                 </ul>
             </div>
+            <div id="iw_ribbon" class="iw_ribbon"> <span class="iw_close"></span> <span class="iw_zoom">Close</span> </div>
         </div>
     </section>
 
@@ -89,9 +90,12 @@
                 <div class="bounce2"></div>
                 <div class="bounce3"></div>
             </div>
-
-
-            <div id="iw_ribbon" class="iw_ribbon"> <span class="iw_close"></span> <span class="iw_zoom">Close</span> </div>
+            <ul class=list>
+                <li><span>2016年9月30日</span><a href="content/session.html"><u>session设置方法</u></a></li>
+                <li><span>2016年9月30日</span><a href="#"><u>我是占位符无用</u></a></li>
+                <li><span>2016年9月30日</span><a href="#"><u>我是占位符无用</u></a></li>
+                <li><span>2016年9月30日</span><a href="#"><u>我是占位符无用</u></a></li>
+            </ul>
         </div>
     </section>
 
