--- a/index.html
+++ b/index.html
@@ -47,31 +47,31 @@
             </div>
             <div class="iw_wrapper">
                 <ul class="iw_thumbs" id="iw_thumbs">
-                    <li><img src="img/head.jpg" data-img="img/head.jpg" alt="Thumb1" />
+                    <li><img src="img/head.jpg" data-img="img/head.jpg" alt="头像" />
                         <div>
                             <h2>Sherry</h2>
                             <p>显示正常.</p>
                         </div>
                     </li>
-                    <li><img src="img/banner1.png" data-img="img/banner1.jpg" alt="Thumb1" />
+                    <li><img src="img/banner1.png" data-img="img/banner1.png" alt="移动端背景" />
                         <div>
                             <h2>Sherry</h2>
                             <p>显示正常.</p>
                         </div>
                     </li>
-                    <li><img src="img/banner.png" data-img="img/banner.jpg" alt="Thumb1" />
+                    <li><img src="img/banner.png" data-img="img/banner.png" alt="pc端背景" />
                         <div>
                             <h2>Sherry</h2>
                             <p>显示正常.</p>
                         </div>
                     </li>
-                    <li><img src="img/pic.jpg" data-img="img/pic.jpg" alt="Thumb1" />
+                    <li><img src="img/pic.jpg" data-img="img/pic.jpg" alt="是我是我就是我" />
                         <div>
                             <h2>皂片</h2>
                             <p>就是想放张大一点的皂片</p>
                         </div>
                     </li>
-                    <li><img src="img/热力图.png" data-img="img/热力图.png" alt="Thumb1" />
+                    <li><img src="img/热力图.png" data-img="img/热力图.png" alt="热力图" />
                         <div>
                             <h2>热力图</h2>
                             <p>这张图我做了一周.</p>
