--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
             <ul class=list>
                 <li><span>2016年9月30日</span><a href="content/session.html"><u>session设置方法</u></a></li>
-                <li><span>2016年9月30日</span><a href="#"><u>我是占位符无用</u></a></li>
+                <li><span>2016年10月08日</span><a href="http://www.cnblogs.com/mamayi/p/5938492.html"><u>spring boot初步学习</u></a></li>
                 <li><span>2016年9月30日</span><a href="#"><u>我是占位符无用</u></a></li>
                 <li><span>2016年9月30日</span><a href="#"><u>我是占位符无用</u></a></li>
             </ul>
